tests/sksl/errors/Ossfuzz37469.asm.frag
### Compilation failed:

error: 1: expected expression, but found ']'
k{int z;}m[];void main(){}
           ^
1 error
